# FoodOrderingPlatform

./: README.md
FastAPI_Server-1/: Dockerfile  Dockerfile.prod  Readme.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
FastAPI_Server-1/alembic/: env.py
FastAPI_Server-1/alembic/versions/: 287cc31f6971_declarative.py  4019d0f755d9_initial.py  504ee90c1d9d_conversation_model_update.py  988b9f2aed05_add_conversation_model.py  f2dafb45d72a_.py  fd1883cbbbcd_minor_change.py
FastAPI_Server-1/app/: admin.py  celery.py  entrypoint.prod.sh  entrypoint.sh  install_requirements.prod.sh  main.py  settings.py
FastAPI_Server-1/app/conversations_app/: api.py  menu.csv  models.py  schemas.py
FastAPI_Server-1/app/middleware/: auth_middleware.py
FastAPI_Server-1/app/tasks_wrapper_app/: api.py
FastAPI_Server-1/app/users_app/: api.py  models.py  schemas.py  tasks.py
FastAPI_Server-1/app/utils/: db_base.py  exceptions.py  pydantic_base.py  security.py
FastAPI_Server-1/app/voice_agent_app/: api.py  models.py  schemas.py
FastAPI_Server-1/nginx/: Dockerfile
FastAPI_Server-1/nginx/vhost.d/: default
SpeechToText/: package-lock.json  package.json
SpeechToText/src/: App.tsx
SpeechToText/src/api/: orderAPI.ts
